<resources>
    <string name="app_name">VikoPrint</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment123123</string>
    <string name="hello_word" translatable="false">Hello World! %s</string>
    <string name="menu_home">Home</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_profile">Profile</string>
    <string name="login_signin">Sign In</string>
    <string name="login_signout">Sign Out</string>
    <string name="pointsValue">Points: %d %s</string>
    <string name="points_string">Points:</string>
    <string name="historyView">History:</string>
    <string name="profilePicture">Profile picture</string>
    <string name="cancel">Cancel</string>
    <string name="test" translatable="false">TEST</string>
    <string name="loading">Loading…</string>
    <string name="emailText" translatable="false">E-mail:</string>
    <string name="btn_change_image">Change</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="adButton">Get Points</string>
    <string name="recycler_text_date">Date:</string>
    <string name="recycler_text_points">Points:</string>
    <string name="recycler_text_pages">Page count:</string>
</resources>
